add put route
