# docs/swagger.json
@@ -8,6 +8,34 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/disc": {
+            "post": {
+                "description": "Add disc",
+                "consumes": [
+                    "application/json"
+                ],
+                "summary": "Add disc",
+                "parameters": [
+                    {
+                        "description": "Disc data",
+                        "name": "disc",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Disc"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
         "/discs": {
             "get": {
                 "description": "Get all discs",
@@ -21,17 +49,6 @@
                                 "$ref": "#/definitions/models.Disc"
                             }
                         }
-                    }
-                }
-            }
-        },
-        "/health-check": {
-            "get": {
-                "description": "Get API health status",
-                "summary": "Get status of server",
-                "responses": {
-                    "200": {
-                        "description": ""
                     }
                 }
             }
